# Nabla-Examples-and-Tests

./: .CMakeLists.txt.swp  .CMakeLists_BASE_935.txt.swp  .CMakeLists_LOCAL_935.txt.swp  .CMakeLists_REMOTE_935.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_BACKUP_935.txt  CMakeLists_REMOTE_935.txt  Readme.md
12_MeshLoaders/: App.hpp  AppLifecycle.cpp  AppLoad.cpp  AppPerf.cpp  AppRuntime.cpp  BundleGeometryItems.h  CMakeLists.txt  MeshLoadersApp.hpp  MeshLoadersAppLifecycle.cpp  MeshLoadersAppLoad.cpp  MeshLoadersAppRuntime.cpp  README.md  inputs.json  main.cpp  meshloaders_inputs.json
12_MeshLoaders/include/: common.hpp
34_DebugDraw/: CMakeLists.txt  main.cpp  pipeline.groovy
34_DebugDraw/app_resources/: common.hlsl  multi_aabb.vertex.hlsl  simple.fragment.hlsl  simple.vertex.hlsl  simple_common.hlsl
34_DebugDraw/include/: CDrawAABB.h  common.hpp
34_DebugDraw/src/: CDrawAABB.cpp
39_DenoiserTonemapper/: AppBootstrap.cpp  AppBootstrap.hpp  AppInputParser.cpp  AppInputParser.hpp  AppStub.cpp  AppStub.hpp  CMakeLists.txt  CommandLineHandler.cpp  CommandLineHandler.hpp  CommonPushConstants.h  ShaderCommon.glsl  config.json.template  main.cpp
40_PathTracer/: CMakeLists.txt  README.md  dev.md  main.cpp
40_PathTracer/app_resources/pathtrace/: beauty.hlsl  common.hlsl  debug.hlsl  debugIDs.hlsl  nee_proposal_probe.hlsl  next_event_estimator.hlsl  previs.hlsl
40_PathTracer/app_resources/present/: default.hlsl
40_PathTracer/app_resources/resolve/: rwmc.hlsl
40_PathTracer/benchmarks/: CPathTracerBenchmark.h
40_PathTracer/include/: common.hpp
40_PathTracer/include/app/: PathTracerAppTypes.h  PathTracingApp.h
40_PathTracer/include/gui/: CSceneWindow.h  CSessionWindow.h  CUIManager.h
40_PathTracer/include/io/: CSceneLoader.h  PathTracerReport.h  RuntimeConfig.h
40_PathTracer/include/renderer/: CLightTree.h  CRenderer.h  CScene.h  CSession.h  SAASequence.h
40_PathTracer/report/: compareSetSmoke.py  index.html  publish.py  publishS3.py  server.py
40_PathTracer/report/css/: report.css
40_PathTracer/report/js/: exrPreview.js  report.js
40_PathTracer/src/app/: PathTracerAppTypes.cpp  PathTracingApp.cpp
40_PathTracer/src/gui/: CSceneWindow.cpp  CSessionWindow.cpp  CUIManager.cpp
40_PathTracer/src/io/: CSceneLoader.cpp  PathTracerReport.cpp  RuntimeConfig.cpp
40_PathTracer/src/renderer/: CLightTree.cpp  CRenderer.cpp  CScene.cpp  CSession.cpp
50.IESProfileTest/: App.cpp  AppEvent.cpp  AppGPU.cpp  AppInputParser.cpp  AppInputParser.hpp  AppRender.cpp  CMakeLists.txt  inputs.json  main.cpp  shader.frag  shader.vert  test.ies
50.IESProfileTest/app_resources/: PSInput.hlsl  VSInput.hlsl  common.hlsl  compute.hlsl  imgui.opts.hlsl  imgui.vertex.hlsl  pixel.hlsl  vertex.hlsl
50.IESProfileTest/compute/: cdc.comp  common.h
50.IESViewer/: App.hpp  AppEvent.cpp  AppGPU.cpp  AppInit.cpp  AppInputParser.cpp  AppInputParser.hpp  AppRender.cpp  AppUI.cpp  CMakeLists.txt  CSimpleIESRenderer.hpp  IES.cpp  IES.hpp  inputs.json  main.cpp
50.IESViewer/app_resources/: common.hlsl  compute.hlsl  false_color.hlsl  ies.pcs.hlsl  ies.unified.hlsl  imgui.opts.hlsl  imgui.pixel.hlsl  imgui.unified.hlsl  pixel.hlsl  vertex.hlsl
52.SystemTest/: CMakeLists.txt  main.cpp
62_CAD/: CMakeLists.txt  CTriangleMesh.cpp  CTriangleMesh.h  DrawBuffers.cpp  DrawBuffers.h  DrawResourcesFiller.cpp  DrawResourcesFiller.h  GeoTexture.cpp  GeoTexture.h  Hatch.cpp  Hatch.h  HatchGlyphBuilder.h  Images.cpp  Images.h  IndexAllocator.h  MSDFs.cpp  MSDFs.h  Polyline.cpp  Polyline.h  SingleLineText.cpp  SingleLineText.h  TransparencyAndAA.md  bike_hatch.h  common.hlsl  curves.cpp  curves.h  curves.h.orig  fragment_shader.hlsl  fragment_shader_debug.hlsl  main.cpp  resolve_alphas.hlsl  vertex_shader.hlsl
62_CAD/scripts/: tiled_grid.py
62_CAD/shaders/: globals.hlsl  runtimeDeviceConfigCaps.hlsl
62_CAD/shaders/geotexture/: common.hlsl  fragment_shader.hlsl  vertex_shader.hlsl
62_CAD/shaders/main_pipeline/: all.hlsl  all_fragment_shaders.hlsl  common.hlsl  dtm.hlsl  fragment.hlsl  fragment_shader.hlsl  fragment_shader_debug.hlsl  fragment_shader_georef.hlsl  fragment_shader_resolve_alphas.hlsl  line_style.hlsl  resolve_alphas.hlsl  vertex_shader.hlsl  vs_fs.hlsl
62_CAD/shaders/solid_color/: fragment_shader_solid_color.hlsl
62_CAD/shaders/tools/: fragment_shader_sample_texture.hlsl  texture_render_fragment_shader.hlsl
64_StreamHash/: CMakeLists.txt  README.md  main.cpp
64_StreamHash/test/references/: std__execution__parallel_policy.json  std__execution__sequenced_policy.json
73_GeometryInspector/: CMakeLists.txt  main.cpp
73_GeometryInspector/include/: common.hpp  transform.hpp
common/: BasicMultiQueueApplication.hpp  CAssetConverter.cpp  CAssetConverter.h  CDefaultSwapchainFramebuffers.hpp  CMakeLists.txt  Camera.hpp  CommonAPI.cpp  CommonAPI.h  InputSystem.hpp  MonoAssetManagerAndBuiltinResourceApplication.hpp  MonoDeviceApplication.hpp  MonoSystemMonoLoggerApplication.hpp  MonoUtilitiesApplication.hpp  SimpleWindowedApplication.hpp
common/CommonPCH/: CMakeLists.txt  PCH.hpp  config.json
common/include/: CCamera.hpp  CEventCallback.hpp  CFPSCamera.hpp  CGeomtryCreatorScene.hpp  ICamera.hpp  IRange.hpp  SBasicViewParameters.hlsl  SimpleWindowedApplication.hpp  WorkgroupDataAccessors.hlsl
common/include/camera/: CArcballCamera.hpp  CCameraControlPanelUiUtilities.hpp  CCameraController.hpp  CCameraFileUtilities.hpp  CCameraFollowRegressionUtilities.hpp  CCameraFollowUtilities.hpp  CCameraGoal.hpp  CCameraGoalAnalysis.hpp  CCameraGoalSolver.hpp  CCameraInputBindingUtilities.hpp  CCameraKeyframeTrack.hpp  CCameraKeyframeTrackPersistence.hpp  CCameraKindUtilities.hpp  CCameraManipulationUtilities.hpp  CCameraMathUtilities.hpp  CCameraPathMetadata.hpp  CCameraPathUtilities.hpp  CCameraPersistence.hpp  CCameraPlaybackTimeline.hpp  CCameraPresentationUtilities.hpp  CCameraPreset.hpp  CCameraPresetFlow.hpp  CCameraPresetPersistence.hpp  CCameraProjectionUtilities.hpp  CCameraScriptVisualDebugOverlayUtilities.hpp  CCameraTraits.hpp  (+46 more)
common/src/: CMakeLists.txt
(+1225 files in other folders)
